--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -188,7 +188,7 @@
           "1528446055102"
         ],
         "settings": {
-          "title": "What the others saying?"
+          "title": "What the others are saying?"
         }
       }
     },
